# comparemol

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: release.yml  test.yml
comparemol/: __init__.py  config.py  mol.py  rotate.py
tests/: test_compare.py  test_load.py  test_rotation.py
